Add new class description.

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 	            </div>
 	            <div id="classSchedule" class="accordion-body collapse">
 		      <div class="accordion-inner">
+                        <p style="font-size:12px">
+                        </p>
+                        <p style="font-size:12px">
+We offer private Capoeira classes and group Capoeira classes for adults and teens. We also offer Capoeira music classes focused on the berimbau, the most important musical instrument in the Capoeira world. 
+                        </p>
 			<table align="center">
 			  <tr>
 			    <td class="first"> </td>
@@ -153,18 +158,25 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
+			    <td class="first">Music</td>
+			    <td>Group</td>
+			    <td>700P</td>
+			    <td> - </td>
+			    <td class="last">50m</td>
+			  </tr>
+			  <tr>
 			    <td class="first">Adults</td>
 			    <td>Group</td>
 			    <td>830P</td>
 			    <td>1100A</td>
-			    <td class="last">110m</td>
+			    <td class="last">80m</td>
 			  </tr>
 			  <tr>
 			    <td class="first">Teens</td>
 			    <td>Group</td>
 			    <td> - </td>
 			    <td>1100A</td>
-			    <td class="last">110m</td>
+			    <td class="last">80m</td>
 			  </tr>
 			</table>
 		      </div>
@@ -227,6 +239,12 @@ Sign up by selecting one of the class passes from the table below. The monthly p
 				<td>200,000</td>
 			  </tr>
 			  <tr class="even">
+				<td class="first">Music</td>
+				<td>20,000</td>
+				<td>100,000</td>
+				<td> - </td>
+			  </tr>
+			  <tr class="odd">
 				<td class="first">Teens</td>
 				<td> - </td>
 				<td> - </td>
@@ -248,7 +266,7 @@ Sign up by selecting one of the class passes from the table below. The monthly p
 		        <p style="font-size:12px">
 		        </p>
 		        <p style="font-size:12px">
-Become a member by selecting one of the group class memberships from the table below. Memberships are designed for students with a long term commitment to learning Capoeira. Class memberships are valid for a year and cover all group classes if you join at the <b>advanced</b> level, or two group classes a week if you join at the <b>beginner</b> level. You can pay in full by credit card at the Quilombola Recreation office, or send a bank transfer to KEB Account 611-021258-055 (Munair Simpson). You may also pay in two or three monthly installments. 
+Become a member by selecting one of the group class memberships from the table below. Memberships are designed for students with a long term commitment to learning Capoeira. Class memberships are valid for a year and cover all group classes if you join at the <b>advanced</b> level, or three group classes a week if you join at the <b>beginner</b> level. You can pay in full by credit card at the Quilombola Recreation office, or send a bank transfer to KEB Account 611-021258-055 (Munair Simpson). You may also pay in two or three monthly installments. 
 		        </p>
 		        <table align="center">
 			  <tr>
@@ -264,7 +282,7 @@ Become a member by selecting one of the group class memberships from the table b
 			  <tr class="even">
 				<td class="first">Beginner</td>
 				<td>1,500,000</td>
-				<td class="last">Two Weekly</td>
+				<td class="last">Three Weekly</td>
 			  </tr>
 		        </table>
                       </div>
