--- a/index.html
+++ b/index.html
@@ -69,11 +69,19 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 		  </ol>
 		  <!-- Carousel items -->
 		  <div class="carousel-inner">
+		    <div class="active item">
+                      <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/koreaherald-logo-300x200px.jpg" border="0" alt="testimonial photo" width="100%" height="225px">
+                      <table class="testimonials">
+                        <tr>
+                          <th>CDO Seoul in Korea Herald <a href="http://www.koreaherald.com/view.php?ud=20140401001296" target="_blank">2014</a> and <a href="http://www.koreaherald.com/view.php?ud=20120828000982&cpv=0" target="_blank">2012</a></th>
+                        </tr>
+                      </table>
+		    </div>
 		    <div class="item">
                       <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/redbull-logo-300x200px.jpg" border="0" alt="testimonial photo" width="100%" height="225px">
                       <table class="testimonials">
                         <tr>
-                          <th>CDO Seoul featured in <a href="http://www.youtube.com/watch?v=JmstTp-uggI" target="_blank">Red Bull Documentary</a></th>
+                          <th>CDO Seoul in <a href="http://www.youtube.com/watch?v=JmstTp-uggI" target="_blank">Red Bull Documentary</a></th>
                         </tr>
                       </table>
 		    </div>
@@ -105,15 +113,7 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
                       <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/mbn-logo-300x200px.jpg" border="0" alt="testimonial photo" width="100%" height="225px">
                       <table class="testimonials">
                         <tr>
-                          <th>CDO Seoul featured on <a href="http://www.mbn.co.kr/pages/vod/programView.mbn?bcastSeqNo=1046234" target="_blank">MBN</a></th>
-                        </tr>
-                      </table>
-		    </div>
-		    <div class="active item">
-                      <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/koreaherald-logo-300x200px.jpg" border="0" alt="testimonial photo" width="100%" height="225px">
-                      <table class="testimonials">
-                        <tr>
-                          <th>CDO Seoul featured in the Korea Herald in <a href="http://www.koreaherald.com/view.php?ud=20140401001296" target="_blank">2014</a> and <a href="http://www.koreaherald.com/view.php?ud=20120828000982&cpv=0" target="_blank">2012</a></th>
+                          <th>CDO Seoul on <a href="http://www.mbn.co.kr/pages/vod/programView.mbn?bcastSeqNo=1046234" target="_blank">MBN</a></th>
                         </tr>
                       </table>
 		    </div>
