--- a/index.html
+++ b/index.html
@@ -161,21 +161,21 @@ We offer private Capoeira classes and group Capoeira classes for adults and teen
 			    <td class="first">Music</td>
 			    <td>Group</td>
 			    <td>700P</td>
-			    <td> - </td>
+			    <td>800A</td>
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
 			    <td class="first">Adults</td>
 			    <td>Group</td>
 			    <td>830P</td>
-			    <td>1100A</td>
+			    <td>1200P</td>
 			    <td class="last">80m</td>
 			  </tr>
 			  <tr>
 			    <td class="first">Teens</td>
 			    <td>Group</td>
 			    <td> - </td>
-			    <td>1100A</td>
+			    <td>1200P</td>
 			    <td class="last">80m</td>
 			  </tr>
 			</table>
@@ -217,77 +217,43 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 		        <p style="font-size:12px">
 		        </p>
 		        <p style="font-size:12px">
-Sign up by selecting one of the class passes from the table below. The monthly pass grants access to all group classes for 30 days. Please make payment in cash or via bank transfer to KEB Account 611-021258-055 (Munair Simpson) before attending the first class.
+Sign up by selecting one of the class passes from the table below. The monthly pass grants access to all group capoeira classes for 30 days. The yearly pass grants access to all group capoeira classes for 12 months. Please make payment in cash or credit card or  via bank transfer to KEB Account 611-021258-055 (Munair Simpson) before attending the first class.
 		        </p>
 		        <table align="center">
 			  <tr>
 				<td class="first"> </td>
-				<td>1 Class</td>
-				<td>5 Classes</td>
+				<td>Daily</td>
 				<td>Monthly</td>
+				<td>Yearly</td>
 			  </tr>
 			  <tr class="even">
 				<td class="first">Privates</td>
-				<td>90,000</td>
-				<td>375,000</td>
+				<td>100,000</td>
+				<td> - </td>
 				<td> - </td>
 			  </tr>
 			  <tr class="odd">
 				<td class="first">Adults</td>
 				<td>30,000</td>
-				<td>125,000</td>
 				<td>200,000</td>
+				<td>2,000,000</td>
 			  </tr>
 			  <tr class="even">
 				<td class="first">Music</td>
 				<td>20,000</td>
-				<td>100,000</td>
-				<td> - </td>
+				<td>80,000</td>
+				<td>500,000</td>
 			  </tr>
 			  <tr class="odd">
 				<td class="first">Teens</td>
 				<td> - </td>
-				<td> - </td>
 				<td>100,000</td>
+				<td>1,000,000</td>
 			  </tr>
 		        </table>
                       </div>
                     </div>
                   </div>
-                  <div class="accordion-group">
-                    <div class="accordion-heading">
-                      <a class="accordion-toggle" data-toggle="collapse"
-                         data-parent="accordion2" href="#classMemberships">
-                        Class Memberships
-                      </a>
-                    </div>
-                    <div id="classMemberships" class="accordion-body collapse">
-                      <div class="accordion-inner">
-		        <p style="font-size:12px">
-		        </p>
-		        <p style="font-size:12px">
-Become a member by selecting one of the group class memberships from the table below. Memberships are designed for students with a long term commitment to learning Capoeira. Class memberships are valid for a year and cover all group classes if you join at the <b>advanced</b> level, or three group classes a week if you join at the <b>beginner</b> level. You can pay in full by credit card at the Quilombola Recreation office, or send a bank transfer to KEB Account 611-021258-055 (Munair Simpson). You may also pay in two or three monthly installments. 
-		        </p>
-		        <table align="center">
-			  <tr>
-				<td class="first"> </td>
-				<td>12 Months</td>
-				<td class="last">Classes Included</td>
-			  </tr>
-			  <tr class="odd">
-				<td class="first">Advanced</td>
-				<td>2,000,000</td>
-				<td class="last">Unlimited</td>
-			  </tr>
-			  <tr class="even">
-				<td class="first">Beginner</td>
-				<td>1,800,000</td>
-				<td class="last">Three Weekly</td>
-			  </tr>
-		        </table>
-                      </div>
-                    </div>
-		  </div>
                   <div class="accordion-group">
                     <div class="accordion-heading">
                       <a class="accordion-toggle" data-toggle="collapse"
@@ -298,7 +264,7 @@ Become a member by selecting one of the group class memberships from the table b
                     <div id="furtherInformation" class="accordion-body collapse">
                       <div class="accordion-inner">
 			<p style="font-size:12px">
-Classes are led by <a href="http://www.zumbicdo.com">Instrutor Zumbi</a>, the proprietor of <a href="http://www.quilombola.com">Quilombola Recreation</a>.
+Classes are led by <a href="http://www.zumbicdo.com">Instrutor Zumbi</a>, the proprietor of <a href="http://www.quilombolarecreation.com">Quilombola Recreation</a>.
 			</p>
 			<p style="font-size:12px">
 Feel free to contact him directly for further information or with inquiries about classes or performances / shows:
