2015 New Schedule & Pricing.. Minor edits

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ We offer private Capoeira classes and group Capoeira classes for adults and teen
 			    <td class="first">Music</td>
 			    <td>Group</td>
 			    <td>930P</td>
-			    <td>1200P</td>
+			    <td> - </td>
 			    <td class="last">50m</td>
 			  </tr>
 			</table>
@@ -198,13 +198,11 @@ We offer private Capoeira classes and group Capoeira classes for adults and teen
                     </div>
                     <div id="classLocation" class="accordion-body collapse">
                       <div class="accordion-inner">
-			<table align="center">
-			  <tr>
-			    <td class="first" style="padding-right: 10px; text-align: left">
-Weekday classes are held in Suite 303 on the third floor of the <a href="http://map.naver.com/?query=서울+중구+북창동+93-3">Samok Building</a> behind the Bank of Korea (near Myeongdong and Shinsegae). Click <a href="https://www.google.co.kr/maps/place/93-3+Bukchang-dong,+Jung-gu,+Seoul/@37.5617036,126.9788511,15z/data=!3m1!4b1!4m2!3m1!1s0x357ca2f3864681b9:0xf3bd15bab5778767">here</a> for the Google Map.
-			    </td>
-			  </tr>
-			</table>
+		        <p style="font-size:12px">
+		        </p>
+		        <p style="font-size:12px">
+Weekday classes are held in Suite 303 on the third floor of the <a target="_blank" href="http://map.naver.com/?query=서울+중구+북창동+93-3">Samok Building</a> behind the Bank of Korea (near Myeongdong and Shinsegae). Click <a target="_blank" href="https://www.google.co.kr/maps/place/93-3+Bukchang-dong,+Jung-gu,+Seoul/@37.5617036,126.9788511,15z/data=!3m1!4b1!4m2!3m1!1s0x357ca2f3864681b9:0xf3bd15bab5778767">here</a> for the Google Map.
+		        </p>
                       </div>
                     </div>
 		  </div>
@@ -267,7 +265,7 @@ Sign up by selecting one of the class passes from the table below. The monthly p
                     <div id="furtherInformation" class="accordion-body collapse">
                       <div class="accordion-inner">
 			<p style="font-size:12px">
-Classes are led by <a href="http://www.zumbicdo.com">Instrutor Zumbi</a>, the proprietor of <a href="http://www.quilombolarecreation.com">Quilombola Recreation</a>.
+Classes are led by <a target="_blank" href="http://www.zumbicdo.com">Instrutor Zumbi</a>, the proprietor of <a target="_blank" href="http://www.quilombolarecreation.com">Quilombola Recreation</a>.
 			</p>
 			<p style="font-size:12px">
 Feel free to contact him directly for further information or with inquiries about classes or performances / shows:
