push out to master

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ We offer private Capoeira classes and group Capoeira classes for adults and teen
 		        <p style="font-size:12px">
 		        </p>
 		        <p style="font-size:12px">
-Weekday classes are held in Suite 303 on the third floor of the <a target="_blank" href="http://map.naver.com/?query=서울+중구+북창동+93-3">Samok Building</a> behind the Bank of Korea (near Myeongdong and Shinsegae). Click <a target="_blank" href="https://www.google.co.kr/maps/place/93-3+Bukchang-dong,+Jung-gu,+Seoul/@37.5617036,126.9788511,15z/data=!3m1!4b1!4m2!3m1!1s0x357ca2f3864681b9:0xf3bd15bab5778767">here</a> for the Google Map.
+Classes are held in Suite 303 on the third floor of the <a target="_blank" href="http://map.naver.com/?query=서울+중구+북창동+93-3">Samok Building</a> behind the Bank of Korea (near Myeongdong and Shinsegae). Click <a target="_blank" href="https://www.google.co.kr/maps/place/93-3+Bukchang-dong,+Jung-gu,+Seoul/@37.5617036,126.9788511,15z/data=!3m1!4b1!4m2!3m1!1s0x357ca2f3864681b9:0xf3bd15bab5778767">here</a> for the Google Map.
 		        </p>
                       </div>
                     </div>
