remove kids class and make beginner class.

--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@ We offer private Capoeira classes and group Capoeira classes for adults and teen
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Teens</td>
+			    <td class="first">Beginners</td>
 			    <td>Group</td>
 			    <td>630P</td>
 			    <td>1200P</td>
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Adults</td>
+			    <td class="first">Intermediates</td>
 			    <td>Group</td>
 			    <td>730P</td>
 			    <td>1200P</td>
