update copyright and address.

--- a/base.html
+++ b/base.html
@@ -159,11 +159,11 @@
     <div class="row-fluid footer">
       <div class="span12">
 	<p>
-copyright (c) 2014 quilombola | cordão de ouro seoul.<br> all rights reserved.
+copyright (c) 2015 quilombola | cordão de ouro seoul.<br> all rights reserved.
 	</p>
 
 	<p>
-[quilombola recreation office]<br> [1106 jongno 1 beon ga, gwancheol-dong, jongno-gu]
+킬롬볼라 레크리에이션<br> 서울특별시중구북창동93-3삼옥빌딩303호
 	</p>
 
 	<p>
