--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
                       <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/bailarinha-donghoon-300x200px.jpg" border="0" alt="testimonial photo" width="100%" height="225px">
                       <table class="testimonials">
                         <tr>
-                          <th>"this capoeira group is like family" --Sarah Cloutier [aka Bailarinha]</th>
+                          <th>"this capoeira group is like family" --Sarah Cloutier</th>
                         </tr>
                       </table>
 		    </div>
