second draft of class preparation page

--- a/classpreparation.html
+++ b/classpreparation.html
@@ -8,8 +8,8 @@
       	  <div class="row-fluid heading">
 	    <div class="span12">
 	      <h1>Class Preparation</h1>
-	      <h2>6 Ways to Radically Optimize Movement Mastery</h2>
-	      <img src="http://www.munair.com/images/headshot.png"  width="50px" height="50px" alt="Instrutor Zumbi"> via <a href="http://www.zumbicdo.com/" title="Posts by Zumbi CDO" rel="author">Instrutor Zumbi</a>
+	      <h3>6 Ways to Radically Optimize Movement Mastery</h3>
+	      <img src="http://www.munair.com/images/headshot.png"  width="50px" height="50px" alt="Instrutor Zumbi"> via <a href="http://www.zumbicdo.com/" title="Posts by Zumbi CDO" rel="author">Instrutor Zumbi</a> on 11/1/2015
 	    </div>
       	  </div>
       	  <div class="row-fluid subheading">
