third draft of class preparation page

--- a/classpreparation.html
+++ b/classpreparation.html
@@ -51,6 +51,7 @@ You are what you eat. Especially, when you need to use your body to attain your 
               <p style="font-size:12px">
 There is no special diet for a Capoeirista. Our bodies are all different. So we eat accordingly. However, we should at least be aware of our nutrition and active work to make sure that we are eating all the right foods to recover after fatiguing our muscles in class.
               </p>
+	      <img src="https://s3-ap-northeast-1.amazonaws.com/www-cdoseoul-com/xango-hanix-400x300px.png" width="100%" alt="Diet Bliss">
       	    </div>
 	  </div>
       	  <div class="row-fluid faq">
