--- a/base.html
+++ b/base.html
@@ -131,7 +131,7 @@
 	    <span class="icon-bar"><span>
 	    <span class="icon-bar"><span>
 	  </button>
-	  <a class="brand" href="#">CDO Seoul</a>
+	  <a class="brand" href="/">CDO Seoul</a>
 	  <a class="brand" style="padding-top: 0px" href="http://www.cdoseoul.kr"><button type="button" class="btn btn-warning">한국어</button></a>
           <div class="nav-collapse collapse">
 	    <ul class="nav">
