final draft of class preparation page

--- a/classpreparation.html
+++ b/classpreparation.html
@@ -28,7 +28,7 @@ Mastery of the beautiful and creative movement that makes Capoeira the most grac
 	    <div class="span4">
 	      <h5>Attitude</h5><hr />
               <p style="font-size:12px">
-Radical improvement requires radical changes. The most radical change starts in the mind beginning with your attitude. Capoeira requires a "can do" attitude. Your teachers will move in ways you cannot fathom when you attend a class for the first time. Don't be discouraged when you don't understand how to move. Since society places heavy emphasis on learning from books, your initial attempts to replicate a move will fail. However, it is only because those "muscles" in the brain have never been exercised. By practicing Capoeira you are embarking upon a voyage to learn to move in ways that you had never thought of before.
+Radical improvement requires radical change. The most radical change starts in the mind beginning with your attitude. Capoeira requires a "can do" attitude. Your teachers will move in ways you cannot fathom when you attend a class for the first time. Don't be discouraged when you don't understand how to move. Since society places heavy emphasis on learning from books, your initial attempts to replicate a move will fail. However, it is only because those "muscles" in the brain have never been exercised. By practicing Capoeira you are embarking upon a voyage to learn to move in ways that you had never thought of before.
               </p>
               <p style="font-size:12px">
 Being open-minded, inquisitive / observant, and patient are changes in attitude that we all need to embrace in order to rapidly progress in our mastery of Capoeira movement. When the teacher or senior student says "now it is time to walk on our hands", be open to trying it for the first time. Observe what is being done, ask questions, and be patient with yourself if you don't walk on your hands perfectly the first time.
@@ -60,6 +60,12 @@ There is no special diet for a Capoeirista. Our bodies are all different. So we 
               <p style="font-size:12px">
 Rest is also essential to rapidly recovering between classes. We are all busy. However, please try to avoid late nights and idling your time away. Rest instead.
               </p>
+              <p style="font-size:12px">
+Prior to attending class, try taking a 30 minute nap. It will refresh the mind and make you more alert during class. Your ability to interpret and recall what goes down will also improve.
+              </p>
+              <p style="font-size:12px">
+A rested mind is also more creative. Use this to your advantage so that you can maximize your creativity during the roda when it is time to play Capoeira and creatively integrate the movement that you have learned into your game.
+              </p>
       	    </div>
 	    <div class="span4">
 	      <h5>Practice</h5><hr />
@@ -82,7 +88,7 @@ Generating huge amounts of deference and respect for the community of martial ar
 Though advanced Capoeiristas have a keen eye, it is highly beneficial to clearly signal your respect for them. A common way to show your respect is to actively work on building your relationship with teachers and seniors. Take every opportunity to spend time with the community of Capoeiristas outside of class hours. Meet for tea or coffee. Join group functions (birthday parties, Brazilian movie nights, Capoeira video reviews, etc.) and make every effort to join rodas, sing and play music. Augmenting your Capoeira experience in this way not only improves your knowledge of Capoeira and Afro-Brazilian culture, but also indicates that you are sharing your energy and giving back to the group.
               </p>
               <p style="font-size:12px">
-Lastly, although you will do everything in your power to adhere to these guidlines and suggestions to radically improve, without the community there is nobody to catch you when you slip. You will slip. It is inevitable that your attitude is not what it should be, or that your discipline wanes. However, with the community you will be able to get back up more easily. Through the community everything becomes easier because we are working together to improve as a group. So give as much as you can to the community. You will get much more out of it.
+Lastly, although you will do everything in your power to adhere to these guidelines and suggestions to radically improve, without the community there is nobody to catch you when you slip. You will slip. It is inevitable that your attitude is not what it should be, or that your discipline wanes. However, with the community you will be able to get back up more easily. Through the community everything becomes easier because we are working together to improve as a group. So give as much as you can to the community. You will get much more out of it.
               </p>
 	    </div>
 	  </div>
