you will not be able to achieve your dreams

--- a/classpreparation.html
+++ b/classpreparation.html
@@ -46,7 +46,7 @@ Don't despair if you are not a disciplined person by nature. The good thing abou
 	    <div class="span4">
 	      <h5>Diet</h5><hr />
               <p style="font-size:12px">
-You are what you eat. Especially, when you need to use your body to attain your movement goals. If you eat junk food, your body will rapidly deteriorate and your will not be able to achieve your Capoeira dreams.
+You are what you eat. Especially, when you need to use your body to attain your movement goals. If you eat junk food, your body will rapidly deteriorate and you will not be able to achieve your Capoeira dreams.
               </p>
               <p style="font-size:12px">
 There is no special diet for a Capoeirista. Our bodies are all different. So we eat accordingly. However, we should at least be aware of our nutrition and active work to make sure that we are eating all the right foods to recover after fatiguing our muscles in class.
