--- a/classpreparation.html
+++ b/classpreparation.html
@@ -105,7 +105,7 @@ Lastly, although you will do everything in your power to adhere to these guideli
 	  </div>
       	  <div class="row-fluid description">
 	    <div id="facebook-feedback" class="span12 copy">
-	      <div class="fb-comments" data-href="http://developers.facebook.com/docs/plugins/comments/" data-width="100%" data-numposts="5" data-colorscheme="light"></div>
+	      <div class="fb-comments" data-href="http://www.cdoseoul.com/classpreparation" data-width="100%" data-numposts="5" data-colorscheme="light"></div>
 	    </div><hr />
 	  </div>
         </div>
