--- a/base.html
+++ b/base.html
@@ -132,6 +132,7 @@
 	    <span class="icon-bar"><span>
 	  </button>
 	  <a class="brand" href="/">CDO Seoul</a>
+	  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> </fb:login-button>
 	  <a class="brand" style="padding-top: 0px" href="http://www.cdoseoul.kr"><button type="button" class="btn btn-warning">한국어</button></a>
           <div class="nav-collapse collapse">
 	    <ul class="nav">
