add new blog piece on expats and integration

--- a/expatsintegrate.html
+++ b/expatsintegrate.html
@@ -60,6 +60,7 @@ Capoeira values diversity of thought and behaviour. Capoeira is a form of bodily
 	  </div>
       	  <div class="row-fluid faq">
 	    <div class="span4">
+	      <h5>Photo</h5><hr />
 	      <img src="https://s3-ap-northeast-1.amazonaws.com/www-cdoseoul-com/expatsintegrate.png" width="100%" alt="Diet Bliss">
       	    </div>
 	    <div class="span4">
