add new blog piece on expats and integration

--- a/expatsintegrate.html
+++ b/expatsintegrate.html
@@ -60,10 +60,6 @@ Capoeira values diversity of thought and behaviour. Capoeira is a form of bodily
 	  </div>
       	  <div class="row-fluid faq">
 	    <div class="span4">
-	      <h5>Photo</h5><hr />
-	      <img src="https://s3-ap-northeast-1.amazonaws.com/www-cdoseoul-com/expatsintegrate.png" width="100%" alt="Diet Bliss">
-      	    </div>
-	    <div class="span4">
 	      <h5>Fellowship</h5><hr />
               <p style="font-size:12px">
 Capoeiristas take time out of their busy schedules to bond with each other. The actively seek out any occasion to be with each other. This often gives Capoeira a cultish feel. However, once you try Capoeira you’ll begin to notice that members of the community simply like spending time with each other and joyfully organise events, tours, birthday parties, and other social occasions to be able to connect more deeply.
@@ -75,6 +71,10 @@ Capoeiristas take time out of their busy schedules to bond with each other. The 
 Capoeira gives feedback right away. The minute you step up to add value to the group, the minute you get recognition. Capoeira groups rapidly embrace people from all walks of life that want to improve the group in some aspect. There are many ways to contribute. You can help by planning events or opening your home for a potluck. Even training every class or putting all your energy / passion into making your movement perfect for rodas will never go unnoticed, so long as you are doing it with the purpose of making the group a better Capoeira community.
               </p>
 	    </div>
+	    <div class="span4">
+	      <h5>Read More</h5><hr />
+		<a href="http://www.cdoseoul.com/classpreparation"> <img src="https://s3-ap-northeast-1.amazonaws.com/www-cdoseoul-com/expatsintegrate.png" width="100%" alt="Enduring Bonds"> </a>
+      	    </div>
 	  </div>
       	  <div class="row-fluid description">
 	    <div id="facebook-feedback" class="span12 copy">
