--- a/expatsintegrate.html
+++ b/expatsintegrate.html
@@ -42,13 +42,13 @@ Having survived six years in Korea, I am acutely aware that I would never have b
 	    <div class="span4">
 	      <h5>Identity</h5><hr />
               <p style="font-size:12px">
-Capoeira is a community-oriented art. Each Capoeira group has a certain identity that its members embrace. Some Capoeira groups want to build a community of great fighters that regularly challenge each other and fight ferociously to sharpen reaction times or improve their ability to do combat with other martial artists. Other Capoeira groups focus on efficiency of movement. Yet others focus on preserving a cultural heritage that survived centuries of oppression. No matter the focus of an individual Capoeira group, the members rally around each other to ensure that the organisations goals are met. That's why Capoeiristas identify with a group and forget about superficial differences within the group.
+Capoeira is a community-oriented art. Each Capoeira group has a certain identity that its members embrace. Some Capoeira groups want to build a community of great fighters that regularly challenge each other and fight ferociously to sharpen reaction times or improve their ability to do combat with other martial artists. Other Capoeira groups focus on efficiency of movement. Yet others focus on preserving a cultural heritage that survived centuries of oppression. Irrespective of the focus of an individual Capoeira group, group members rally round each other to ensure that the organisations goals are met. That's why Capoeiristas identify with a group and think less about the differences within the group.
               </p>
 	    </div>
 	    <div class="span4">
 	      <h5>Inclusivity</h5><hr />
               <p style="font-size:12px">
-Capoeira was practiced by people that were denied the rights of regular citizens. Consequently, Capoeiristas go out of their way to be inclusive as they how terrible it is to be excluded from society. Consequently, members are actively working on breaking down cultural and language barriers. For example, in our Capoeira group, expats are encouraged to learn Korean to help bond with the Korean members of the group and vice-versa. Taking the time to study another language and open your mind to another culture that is very foreign to yours is challenging. Yet, since all members of the group are burdened with over coming language and cultural issues, it immediately becomes something everyone forms strong bonds over.
+Capoeira was practiced by people that were denied the rights of regular citizens. Consequently, Capoeiristas go out of their way to be inclusive as they know how terrible it is to be excluded from society. Consequently, members are actively working on breaking down cultural and language barriers. For example, in our Capoeira group, expats are encouraged to learn Korean to help bond with the Korean members of the group and vice-versa. Taking the time to study another language and open your mind to another culture that is very foreign to yours is challenging. Yet, since all members of the group are burdened with over coming language and cultural issues, it immediately becomes something everyone forms strong bonds over.
               </p>
 	    </div>
 	    <div class="span4">
@@ -62,13 +62,13 @@ Capoeira values diversity of thought and behaviour. Capoeira is a form of bodily
 	    <div class="span4">
 	      <h5>Fellowship</h5><hr />
               <p style="font-size:12px">
-Capoeiristas take time out of their busy schedules to bond with each other. The actively seek out any occasion to be with each other. This often gives Capoeira a cultish feel. However, once you try Capoeira you’ll begin to notice that members of the community simply like spending time with each other and joyfully organise events, tours, birthday parties, and other social occasions to be able to connect more deeply.
+Capoeiristas take time out of their busy schedules to bond with each other. They actively seek out any occasion to be with each other. This often gives Capoeira a cultish feel. However, once you try Capoeira you’ll begin to notice that members of the community simply like spending time with each other and joyfully organise events, tours, birthday parties, and other social occasions to be able to connect more deeply.
               </p>
       	    </div>
 	    <div class="span4">
 	      <h5>Feedback</h5><hr />
               <p style="font-size:12px">
-Capoeira gives feedback right away. The minute you step up to add value to the group, the minute you get recognition. Capoeira groups rapidly embrace people from all walks of life that want to improve the group in some aspect. There are many ways to contribute. You can help by planning events or opening your home for a potluck. Even training every class or putting all your energy / passion into making your movement perfect for rodas will never go unnoticed, so long as you are doing it with the purpose of making the group a better Capoeira community.
+Capoeira gives feedback right away. The minute you step up to add value to the group, the minute you get recognition. Capoeira groups rapidly embrace people from all walks of life that want to improve the group in some aspect. There are many ways to contribute. You can help by planning events or opening your home for a potluck. Even training every class or putting all your energy / passion into making your movement perfect for rodas will never go unnoticed. Almost any action with the purpose of making the group a better Capoeira community is celebrated.
               </p>
 	    </div>
 	    <div class="span4">
