--- a/expatsintegrate.html
+++ b/expatsintegrate.html
@@ -42,7 +42,7 @@ Having survived six years in Korea, I am acutely aware that I would never have b
 	    <div class="span4">
 	      <h5>Identity</h5><hr />
               <p style="font-size:12px">
-Capoeira is a community-oriented art. Each Capoeira group has a certain identity that its members embrace. Some Capoeira groups want to build a community of great fighters that regularly challenge each other and fight ferociously to sharpen reaction times or improve their ability to do combat with other martial artists. Other Capoeira groups focus on efficiency of movement. Yet others focus on preserving a cultural heritage that survived centuries of oppression. Irrespective of the focus of an individual Capoeira group, group members rally round each other to ensure that the organisations goals are met. That's why Capoeiristas identify with a group and think less about the differences within the group.
+Capoeira is a community-oriented art. Each Capoeira group has a certain identity that its members embrace. Some Capoeira groups want to build a community of great fighters that regularly challenge each other and fight ferociously to sharpen reaction times or improve their ability to do combat with other martial artists. Other Capoeira groups focus on efficiency of movement. Yet others focus on preserving a cultural heritage that survived centuries of oppression. Irrespective of the focus of an individual Capoeira group, group members rally round each other to ensure that the organisation's goals are met. That is why Capoeiristas identify with a group and think less about the differences within the group.
               </p>
 	    </div>
 	    <div class="span4">
@@ -66,7 +66,7 @@ Capoeiristas take time out of their busy schedules to bond with each other. They
               </p>
       	    </div>
 	    <div class="span4">
-	      <h5>Feedback</h5><hr />
+	      <h5>Recognition</h5><hr />
               <p style="font-size:12px">
 Capoeira gives feedback right away. The minute you step up to add value to the group, the minute you get recognition. Capoeira groups rapidly embrace people from all walks of life that want to improve the group in some aspect. There are many ways to contribute. You can help by planning events or opening your home for a potluck. Even training every class or putting all your energy / passion into making your movement perfect for rodas will never go unnoticed. Almost any action with the purpose of making the group a better Capoeira community is celebrated.
               </p>
