Add Wharton mention

--- a/expatsintegrate.html
+++ b/expatsintegrate.html
@@ -31,7 +31,7 @@
       	  <div class="row-fluid description">
 	    <div id="about" class="span12 copy">
 	      <p>
-Expats often arrive in Korea and feel isolated within weeks. They feel cut out of mainstream society and opportunities to grow and progress. It doesn’t matter whether the expats are English teachers or business consultants for Samsung. All expats are immediately thrown into a battle against a shrinking social circle and opportunities for genuine bonding.
+Expats often arrive in Korea and feel isolated within weeks. They feel cut out of mainstream society and opportunities to grow and progress. It doesn’t matter whether the expats are English teachers or business consultants for Samsung with Wharton MBAs. All expats are immediately thrown into a battle against a shrinking social circle and opportunities for genuine bonding.
               </p>
 	      <p>
 Having survived six years in Korea, I am acutely aware that I would never have been able to do it without the help of <a href="http://www.facebook.com/cdoseoul" target="_new">my Capoeira group</a>. Here are five reasons why Capoeira helps expats integrate into Korea.
