update class information

--- a/index.html
+++ b/index.html
@@ -158,28 +158,28 @@ We offer private Capoeira classes and group Capoeira classes for adults and teen
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Beginners</td>
+			    <td class="first">Fundamentals</td>
 			    <td>Group</td>
 			    <td>630P</td>
 			    <td>1200P</td>
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Intermediates</td>
+			    <td class="first">Beginners</td>
 			    <td>Group</td>
 			    <td>730P</td>
 			    <td>1200P</td>
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Advanced</td>
+			    <td class="first">Intermediates</td>
 			    <td>Group</td>
 			    <td>830P</td>
 			    <td>1200P</td>
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Music</td>
+			    <td class="first">Music/Roda</td>
 			    <td>Group</td>
 			    <td>930P</td>
 			    <td> - </td>
