Add new Get Smarter Blog Entry

--- a/getsmarter.html
+++ b/getsmarter.html
@@ -53,7 +53,7 @@ Walking on your hands really takes you out of your comfort zone as a biped. Bein
 	    </div>
 	    <div class="span4">
 	      <h5>High Function Zone</h5><hr />
-		<a target="_new" href=http://lifehacker.com/the-science-of-breaking-out-of-your-comfort-zone-and-w-656426705"> <img src="https://s3-ap-northeast-1.amazonaws.com/www-cdoseoul-com/getsmarter.png" width="100%" alt="Improve Creativity"> </a>
+		<a target="_new" href="http://lifehacker.com/the-science-of-breaking-out-of-your-comfort-zone-and-w-656426705"> <img src="https://s3-ap-northeast-1.amazonaws.com/www-cdoseoul-com/getsmarter.png" width="100%" alt="Improve Creativity"> </a>
               </p>
       	    </div>
 	  </div>
@@ -62,7 +62,7 @@ Walking on your hands really takes you out of your comfort zone as a biped. Bein
 	    <div class="span4">
 	      <h5>Imagination</h5><hr />
               <p style="font-size:12px">
-Capoeiristas often dream of moving differently at night when they sleep. This is a testimony to the fact that the art of Capoeira stimulates the imagination. The practice of Capoeira breaks down ingrained fears of failure and simultaneously replaces them with the belief that anything is possible. Once you start doing things you've never done before with great frequency, as you do when you practice Capoeira, you increasing question what is truly impossible. Capoeira develops your ability to imagine that you can do great things with your life. Our most revered intellects had fantastic imaginations.
+Capoeiristas often dream of moving differently at night when they sleep. This is a testimony to the fact that the art of Capoeira stimulates the imagination. The practice of Capoeira breaks down ingrained fears of failure and simultaneously replaces them with the belief that anything is possible. Once you start doing things you've never done before with great frequency, as you do when you practice Capoeira, you increasingly question what is truly impossible. Capoeira develops your ability to imagine that you can do great things with your life. Society's most revered intellects had fantastic imaginations.
               </p>
       	    </div>
 	    <div class="span4">
