--- a/index.html
+++ b/index.html
@@ -23,14 +23,42 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 	        </p>
 	      </div><hr />
 	    </div>
+      	  <div class="row-fluid faq">
+	    <div id="faq" class="span12">
+	        <div class="accordion" id="accordion2">
+	          <div class="accordion-group">
+	            <div class="accordion-heading">
+                      <a class="accordion-toggle" data-toggle="collapse"
+                         data-parent="#accordion2" href="#classLocation">
+                        Class Location
+                      </a>
+                    </div>
+                    <div id="classLocation" class="accordion-body collapse">
+                      <div class="accordion-inner">
+		        <p style="font-size:12px">
+		        </p>
+		        <p style="font-size:12px">
+Classes are held in Suite 303 on the third floor of the <a target="_blank" href="http://map.naver.com/?query=서울+중구+북창동+93-3">Samok Building</a> behind the Bank of Korea (near Myeongdong and Shinsegae). Click <a target="_blank" href="https://www.google.co.kr/maps/place/93-3+Bukchang-dong,+Jung-gu,+Seoul/@37.5617036,126.9788511,15z/data=!3m1!4b1!4m2!3m1!1s0x357ca2f3864681b9:0xf3bd15bab5778767">here</a> for the Google Map.
+		        </p>
+                      </div>
+                    </div>
+		  </div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
       	    <div class="row-fluid marketing">
-	      <div class="span4">
-		<h5>Free Class Signup Form</h5><hr />
+	      <div class="span12">
+		<h5>Membership Application Form</h5><hr />
                 <div id="stylized-form">
                         <form id="form" name="form" method="post" action="/contact">
                                 <div class="wrapper-block">
                                         <label>Name:<span class="small-label">please enter your name</span></label>
                                         <input type="text" name="name" id="name" />
+                                </div>
+                                <div class="wrapper-block">
+                                        <label>Facebook ID:<span class="small-label">please enter your Facebook ID</span></label>
+                                        <input type="text" name="fbid" id="fbid" />
                                 </div>
                                 <div class="wrapper-block">
                                         <label>Email:<span class="small-label">please enter your email</span></label>
@@ -39,6 +67,14 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
                                 <div class="wrapper-block">
                                         <label>Mobile:<span class="small-label">please enter your mobile number</span></label>
                                         <input type="text" name="mobile" id="mobile" />
+                                </div>
+                                <div class="wrapper-block">
+                                        <label>Injuries:<span class="small-label">please enter any injuries you think we should know about:</span></label>
+                                        <input type="text" name="injuries" id="injuries" />
+                                </div>
+                                <div class="wrapper-block">
+                                        <label>Previous Sports/Hobbies:<span class="small-label">please enter your previous sports or hobbies (like yoga):</span></label>
+                                        <input type="text" name="hobbies" id="hobbies" />
                                 </div>
                                 <div class="wrapper-block">
                                         <label>Referral:<span class="small-label">how did you find out about us?</span></label>
@@ -51,6 +87,8 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
                                 <input type="submit" value="Submit" class="submit btn-form" /></input>
                         </form>
                 </div>
+	      </div>
+	      <div class="span2">
 	      </div>
 	      <div class="span4">
 		<h5>Capoeira Games</h5><hr />
@@ -123,138 +161,13 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 		  <a class="carousel-control right" href="#testimonials" data-slide="next">&rsaquo;</a>
 		</div>
 	      </div>
+	      <div class="span2">
+	      </div>
       	    </div>
 	  </div>
       	  <div class="row-fluid faq">
 	    <div id="faq" class="span12">
 	        <div class="accordion" id="accordion2">
-	          <div class="accordion-group">
-	            <div class="accordion-heading">
-		      <a class="accordion-toggle" data-toggle="collapse"
-		         data-parent="#accordion2" href="#classSchedule">
-		        Class Schedule
-		      </a>
-	            </div>
-	            <div id="classSchedule" class="accordion-body collapse">
-		      <div class="accordion-inner">
-                        <p style="font-size:12px">
-                        </p>
-                        <p style="font-size:12px">
-We offer private Capoeira classes and group Capoeira classes for adults and teens. We also offer Capoeira music classes focused on the berimbau, the most important musical instrument in the Capoeira world. 
-                        </p>
-			<table align="center">
-			  <tr>
-			    <td class="first"> </td>
-			    <td>Method</td>
-			    <td>M - Th</td>
-			    <td>S - Sa</td>
-			    <td class="last">Time</td>
-			  </tr>
-			  <tr>
-			    <td class="first">Privates</td>
-			    <td>1-On-1</td>
-			    <td>RSVP</td>
-			    <td>RSVP</td>
-			    <td class="last">50m</td>
-			  </tr>
-			  <tr>
-			    <td class="first">Fundamentals</td>
-			    <td>Group</td>
-			    <td>630P</td>
-			    <td>1200P</td>
-			    <td class="last">50m</td>
-			  </tr>
-			  <tr>
-			    <td class="first">Beginners</td>
-			    <td>Group</td>
-			    <td>730P</td>
-			    <td>1200P</td>
-			    <td class="last">50m</td>
-			  </tr>
-			  <tr>
-			    <td class="first">Intermediates</td>
-			    <td>Group</td>
-			    <td>830P</td>
-			    <td>1200P</td>
-			    <td class="last">50m</td>
-			  </tr>
-			  <tr>
-			    <td class="first">Music/Roda</td>
-			    <td>Group</td>
-			    <td>930P</td>
-			    <td> - </td>
-			    <td class="last">50m</td>
-			  </tr>
-			</table>
-		      </div>
-	            </div>
-	          </div>
-            	  <div class="accordion-group">
-              	    <div class="accordion-heading">
-                      <a class="accordion-toggle" data-toggle="collapse"
-                         data-parent="#accordion2" href="#classLocation">
-                        Class Location
-                      </a>
-                    </div>
-                    <div id="classLocation" class="accordion-body collapse">
-                      <div class="accordion-inner">
-		        <p style="font-size:12px">
-		        </p>
-		        <p style="font-size:12px">
-Classes are held in Suite 303 on the third floor of the <a target="_blank" href="http://map.naver.com/?query=서울+중구+북창동+93-3">Samok Building</a> behind the Bank of Korea (near Myeongdong and Shinsegae). Click <a target="_blank" href="https://www.google.co.kr/maps/place/93-3+Bukchang-dong,+Jung-gu,+Seoul/@37.5617036,126.9788511,15z/data=!3m1!4b1!4m2!3m1!1s0x357ca2f3864681b9:0xf3bd15bab5778767">here</a> for the Google Map.
-		        </p>
-                      </div>
-                    </div>
-		  </div>
-                  <div class="accordion-group">
-                    <div class="accordion-heading">
-                      <a class="accordion-toggle" data-toggle="collapse"
-                         data-parent="accordion2" href="#classPasses">
-                        Class Passes
-                      </a>
-                    </div>
-                    <div id="classPasses" class="accordion-body collapse">
-                      <div class="accordion-inner">
-		        <p style="font-size:12px">
-		        </p>
-		        <p style="font-size:12px">
-Sign up by selecting one of the class passes from the table below. The monthly pass grants access to all group capoeira classes for 30 days. The yearly pass grants access to all group capoeira classes for 12 months. Please make payment in cash or credit card or via bank transfer to KEB Account 611-021258-055 (Munair Simpson) before attending the first class.
-		        </p>
-		        <table align="center">
-			  <tr>
-				<td class="first"> </td>
-				<td>Daily</td>
-				<td>Monthly</td>
-				<td>Yearly</td>
-			  </tr>
-			  <tr class="even">
-				<td class="first">Privates</td>
-				<td>100,000</td>
-				<td>2,000,000</td>
-				<td>18,000,000</td>
-			  </tr>
-			  <tr class="odd">
-				<td class="first">Adults</td>
-				<td>20,000</td>
-				<td>200,000</td>
-				<td>2,000,000</td>
-			  </tr>
-			  <tr class="odd">
-				<td class="first">Teens</td>
-				<td>10,000</td>
-				<td>100,000</td>
-				<td>1,000,000</td>
-			  </tr>
-			  <tr class="even">
-				<td class="first">Music</td>
-				<td>10,000</td>
-				<td>100,000</td>
-				<td>1,000,000</td>
-			  </tr>
-		        </table>
-                      </div>
-                    </div>
-                  </div>
                   <div class="accordion-group">
                     <div class="accordion-heading">
                       <a class="accordion-toggle" data-toggle="collapse"
