simpler version with focus on registration

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Classes are held in Suite 303 on the third floor of the <a target="_blank" href=
                                         <input type="text" name="injuries" id="injuries" />
                                 </div>
                                 <div class="wrapper-block">
-                                        <label>Previous Sports/Hobbies:<span class="small-label">please enter your previous sports or hobbies (like yoga):</span></label>
+                                        <label>Previous Sports/Hobbies:<span class="small-label">please enter your previous sports (like yoga):</span></label>
                                         <input type="text" name="hobbies" id="hobbies" />
                                 </div>
                                 <div class="wrapper-block">
